<resources>
    <string name="app_name">Calculadora</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="clr">clr</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="button">Button</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="Punto">.</string>
    <string name="Clr">Clr</string>
    <string name="Igual">=</string>
    <string name="Diagonal">/</string>
    <string name="Mas">+</string>
    <string name="Menos">-</string>
    <string name="Multi">*</string>
    <string name="Elevado">^</string>
    <string name="Raiz">Raiz</string>
    <string name="Porcenraje">%</string>
    <string name="Izq"><![CDATA[<-]]></string>
    <string name="Der"><![CDATA[->]]></string>
    <string name="subneteo">SUBNETEO</string>
</resources>
